# HnT-neuralNetworks

./: CMakeLists.txt  Doxyfile.in  README
src/: CMakeLists.txt  Clonable.hpp  General.hpp  HnT.hpp
src/dataset/: CMakeLists.txt  ClassDataset.cpp  ClassDataset.hpp  Dataset.cpp  Dataset.hpp  ErrorVector.cpp  ErrorVector.hpp  FeatureVector.cpp  FeatureVector.hpp  ImageDataset.cpp  ImageDataset.hpp  Mask.cpp  Mask.hpp  SequenceClassDataset.cpp  SequenceClassDataset.hpp  ValueVector.cpp  ValueVector.hpp
src/dataset/supervised/: ClassificationDataset.cpp  ClassificationDataset.hpp  RegressionDataset.cpp  RegressionDataset.hpp  SupervisedDataset.cpp  SupervisedDataset.hpp
src/dataset/unsupervised/: UnsupervisedDataset.cpp  UnsupervisedDataset.hpp
src/executables/: CTCLearning.cpp  CTCTesting.cpp  ImagesToHTK.cpp  connectorTest.cpp  createClassDataset.cpp  createClassificationPixelRimes.cpp  createClassificationRimesNetworks.cpp  createFoldRimes.cpp  createHTKFiles.cpp  createHTKHundredDictionnariesFiles.cpp  createImageDataset.cpp  createImageFromClusters.cpp  createImageFromNetwork.cpp  createImagesFromDB.cpp  createPNDB.cpp  createPixelDB.cpp  createPixelIAMDB.cpp  createPixelRimes.cpp  createRegressionPixelRimes.cpp  createRegressionPixelRimesIFE.cpp  createRegressionPixelRimesPerPart.cpp  createSignalFromNetwork.cpp  createToyClusterDatasets.cpp  createXORDB.cpp  diversityMeasurement.cpp  mainTesting.cpp  meanImage.cpp  mixedEnsemblesCTCAdder.cpp  mixedEnsemblesCTCTraining.cpp  mixedEnsemblesClassificationTraining.cpp  mixedEnsemblesComposers.cpp  mixedEnsemblesTraining.cpp  mixedEnsemblesVisualisation.cpp  nnTesting.cpp  pbdnnBatch.cpp  pbdnnCTC.cpp  pbdnnCluster.cpp  pbdnnClusterBestNetwork.cpp  pbdnnClusterDatCreator.cpp  pbdnnClusterForToys.cpp  (+12 more)
src/machines/: CMakeLists.txt  Machine.cpp  Machine.hpp
src/machines/neuralMachines/: CMakeLists.txt  ImageNeuralNetwork.cpp  MixedEnsembles.cpp  MixedEnsembles.hpp  NeuralMachine.cpp  NeuralMachine.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  PBDNN.cpp  PBDNN.hpp
src/machines/neuralMachines/connections/: Connection.cpp  Connection.hpp  Connector.cpp  Connector.hpp  FullConnection.cpp  FullConnection.hpp  RecurrentConnection.cpp  RecurrentConnection.hpp
src/machines/neuralMachines/layers/: InputLayer.cpp  InputLayer.hpp  Layer.cpp  Layer.hpp  LayerCTC.cpp  LayerCTC.hpp  LayerSigmoid.cpp  LayerSigmoid.hpp  LayerSoftMax.cpp  LayerSoftMax.hpp  LayerTanh.cpp  LayerTanh.hpp
src/performanceMeasurers/: ClassificationMeasurer.cpp  ClassificationMeasurer.hpp  CrossValidationParams.cpp  CrossValidationParams.hpp  DiversityMeasurer.cpp  DiversityMeasurer.hpp  PerformanceMeasurer.cpp  PerformanceMeasurer.hpp  RegressionMeasurer.cpp  RegressionMeasurer.hpp
src/trainer/: CMakeLists.txt  Trainer.cpp  Trainer.hpp
src/trainer/criteria/: Criteria.cpp  Criteria.hpp  Criterion.cpp  Criterion.hpp  IterationCount.cpp  IterationCount.hpp
src/trainer/errorMeasurers/: AEMeasurer.cpp  AEMeasurer.hpp  CERMeasurer.cpp  CERMeasurer.hpp  ClassificationErrorMeasurer.cpp  ClassificationErrorMeasurer.hpp  ErrorMeasurer.cpp  ErrorMeasurer.hpp  MSEMeasurer.cpp  MSEMeasurer.hpp  SEMeasurer.cpp  SEMeasurer.hpp  SampleMeasurable.hpp
src/trainer/supervisedTrainers/: CMakeLists.txt  CrossValidationParams.hpp  SupervisedTrainer.cpp  SupervisedTrainer.hpp
src/trainer/supervisedTrainers/neuralNetworkTrainers/: BackPropParams.cpp  BackPropParams.hpp  BackPropagation.cpp  BackPropagation.hpp  CTCTrainer.cpp  CTCTrainer.hpp  ImageAutoEncoding.cpp  ImageAutoEncoding.hpp  ImageAutoEncodingME.cpp  ImageAutoEncodingME.hpp  ImageBackPropME.cpp  ImageBackPropME.hpp  ImagePopulationInverseTrainer.cpp  ImagePopulationInverseTrainer.hpp  LearningParams.cpp  LearningParams.hpp  MECTCTrainer.cpp  MECTCTrainer.hpp  NeuralNetworkTrainer.cpp  NeuralNetworkTrainer.hpp  PopulationBP.cpp  PopulationBP.hpp  PopulationBPBatch.cpp  PopulationBPBatch.hpp  PopulationBPParams.cpp  PopulationBPParams.hpp  PopulationClusterBP.cpp  PopulationClusterBP.hpp  PopulationInverseTrainer.cpp  PopulationInverseTrainer.hpp  PopulationTrainer.cpp  PopulationTrainer.hpp  RTRL.cpp  RTRL.hpp
src/utilities/: GeneralUtilities.cpp  GeneralUtilities.hpp  ImageFrameExtractor.cpp  ImageFrameExtractor.hpp  ImageProcessing.cpp  ImageProcessing.hpp  TextUtilities.cpp  TextUtilities.hpp  ToyDatasets.cpp  ToyDatasets.hpp
